# dash

./: .gitignore  README.md
collector/: .gitignore  pyproject.toml
collector/collector/: __main__.py  state.py  utils.py
collector/collector/api/: http.py
frontend/: README.md  local-proxy.sh  nginx.conf  package-lock.json  package.json
frontend/app/: app.js  index.html  router.js
frontend/app/components/: card.hbs  dashboard.hbs  dashboard.js  master.hbs  navbar.hbs  navbar.js  weather.hbs
frontend/app/routes/: index.js
frontend/app/services/: state.js
frontend/app/templates/: application.hbs  index.hbs
frontend/config/: environment.js
frontend/tests/: index.html  test-helper.js
frontend/tests/integration/components/: dashboard-test.js
frontend/tests/unit/services/: index-test.js
rest/: config.json  config.json.dist  pyproject.toml  response.py  server.py
